feat(sleep-control): add sleep module